--- a/Producto/productos.html
+++ b/Producto/productos.html
@@ -462,7 +462,7 @@
         <a href="https://web.facebook.com/lareservarioja/?ref=page_internal" class="fab fa-facebook-f"></a>
         <a href="https://www.instagram.com/explore/locations/311725019229865/la-reserva-i-drinks-more/" class="fab fa-instagram"></a>
     </div>
-    <div class="credit"> Creado por <span>Mari Carmen Daga Calle</span> | todos los derechos reservados </div>
+    <div class="credit"> Sitio web de <span>La Reserva</span> | Todos los derechos reservados </div>
 </section>
 
 <!-- footer section ends  -->
